--- a/08-animation-2/index.html
+++ b/08-animation-2/index.html
@@ -56,9 +56,7 @@
     </section> -->
 
     <section>
-      <div class="animate__animated animate__bounce animate__slowe">
-        Example
-      </div>
+      <div class="animate__animated animate__rollIn">Example</div>
     </section>
   </body>
 </html>
