Added Media Query class content

--- a/09-media-query/index.html
+++ b/09-media-query/index.html
@@ -13,6 +13,79 @@
       <h1 class="mobile">Mobile Hello World</h1>
     </header> -->
 
-    <h1>미디어쿼리 응용</h1>
+    <!-- <h1>미디어쿼리 응용</h1> -->
+
+    <!-- 모바일에서 메뉴버튼 y축 정렬 변화 연습 -->
+    <!-- <ul class="media-menu">
+      <li><a href="#">menu 1</a></li>
+      <li><a href="#">menu 2</a></li>
+      <li><a href="#">menu 3</a></li>
+    </ul> -->
+
+    <!-- 모바일에서 header 버튼들의 2줄 변화 -->
+    <!-- <header class="intro">
+      <h1></h1>
+      <nav>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
+    </header>
+    <main role="main">
+      <p>asdfsafsda</p>
+    </main> -->
+
+    <!-- 모바일, 태블릿, PC 크기에 맞는 메뉴 구성 -->
+    <!-- <div class="container">
+      <div class="column">
+        <img src="https://via.placeholder.com/250x150" alt="" />
+        <div class="image-info">
+          <h2>Title</h2>
+          <h4>description</h4>
+        </div>
+      </div>
+
+      <div class="column">
+        <img src="https://via.placeholder.com/250x150" alt="" />
+        <div class="image-info">
+          <h2>Title</h2>
+          <h4>description</h4>
+        </div>
+      </div>
+
+      <div class="column">
+        <img src="https://via.placeholder.com/250x150" alt="" />
+        <div class="image-info">
+          <h2>Title</h2>
+          <h4>description</h4>
+        </div>
+      </div>
+
+      <div class="column">
+        <img src="https://via.placeholder.com/250x150" alt="" />
+        <div class="image-info">
+          <h2>Title</h2>
+          <h4>description</h4>
+        </div>
+      </div>
+
+      <div class="column">
+        <img src="https://via.placeholder.com/250x150" alt="" />
+        <div class="image-info">
+          <h2>Title</h2>
+          <h4>description</h4>
+        </div>
+      </div>
+
+      <div class="column">
+        <img src="https://via.placeholder.com/250x150" alt="" />
+        <div class="image-info">
+          <h2>Title</h2>
+          <h4>description</h4>
+        </div>
+      </div>
+    </div> -->
   </body>
 </html>
