Updated further part of the class

--- a/10-kidsgao/index.html
+++ b/10-kidsgao/index.html
@@ -26,47 +26,117 @@
         <div class="right-cloud"></div>
         <div class="dragonfly"></div>
       </div>
+    </header>
 
-      <div id="farm1">
-        <div class="farm1-left"></div>
-        <div class="farmer"></div>
-        <div class="farm1-right"></div>
+    <div id="farm1">
+      <div class="farm1-left"></div>
+      <div class="farmer"></div>
+      <div class="farm1-right"></div>
 
-        <div class="farm-speech-wrap">
-          <img src="img/farm/farm1/farmspeech.png" alt="우리쌀 점토" />
-          <p class="farm-speech">
-            식재료만 넣은 안전한<br />
-            우리쌀 점포 키즈가오는<br />
-            우리 쌀을 사용하여 만들어요.<br />
-            화학물질을 사용하지 않고,<br />
-            식재료를 사용해서 만든<br />
-            안전한 제품이랍니다.
+      <div class="farm-speech-wrap">
+        <img src="img/farm/farm1/farmspeech.png" alt="우리쌀 점토" />
+        <p class="farm-speech">
+          식재료만 넣은 안전한<br />
+          우리쌀 점포 키즈가오는<br />
+          우리 쌀을 사용하여 만들어요.<br />
+          화학물질을 사용하지 않고,<br />
+          식재료를 사용해서 만든<br />
+          안전한 제품이랍니다.
+        </p>
+      </div>
+    </div>
+
+    <div id="farm2">
+      <div class="farm2-left"></div>
+      <div class="scarecrow"></div>
+      <div class="farm2-right"></div>
+    </div>
+
+    <div id="farm3">
+      <div class="farm3-window"></div>
+      <div class="machine-wrap">
+        <div class="farm3-machine"></div>
+        <div class="saw-shadow"></div>
+        <div class="saw1"></div>
+        <div class="saw2"></div>
+        <div class="machine-bird"></div>
+        <div class="timer"></div>
+      </div>
+      <img
+        class="farm3-bubble"
+        src="./img/farm/farm3/farm3bubble.png"
+        alt="기계를 통해서 쌀알이 딱딱한 껍질을 벗어 냅니다."
+      />
+    </div>
+
+    <div id="forest1">
+      <div class="tree-left"></div>
+      <div class="tree-wrap">
+        <div class="tree-right"></div>
+        <div class="rabbit1"></div>
+        <div class="rabbit2"></div>
+      </div>
+    </div>
+
+    <div id="forest2">
+      <div class="frog"></div>
+      <div class="machine-wrap2">
+        <div class="machine-bottom"></div>
+        <div class="machine-left"></div>
+        <div class="machine-right"></div>
+      </div>
+
+      <img
+        class="forest2-bubble"
+        src="./img/forest/forest2/forestbubble.png"
+        alt="기계를 통해서 쌀을 고운 가루로 만든답니다."
+      />
+      <div class="forest2-tree"></div>
+    </div>
+
+    <div id="forest3">
+      <div class="forest3-wrap">
+        <div class="forest3-tree"></div>
+        <div class="small-bird"></div>
+        <div class="big-bird"></div>
+      </div>
+    </div>
+
+    <div id="science">
+      <div class="science-wrap">
+        <div class="left-wrap">
+          <div class="left-gly"></div>
+          <img src="img/science/leftTitle.png" alt="자초, 어성초, 감초" />
+          <p>
+            자초 어성초 감초를 넣어서<br />
+            피부진정 및 함염 효과가 있답니다.
+          </p>
+        </div>
+        <div class="center-wrap">
+          <div class="purple-steam"></div>
+          <div class="funnel-back"></div>
+          <div class="funnel-front"></div>
+        </div>
+        <div class="right-wrap">
+          <div class="right-water"></div>
+          <img src="img/science/rightTitle.png" alt="글리세린, 올리브유" />
+          <p>
+            빵의 표면을 촉촉하게 해주는<br />
+            글리세린과 오메가-9 지방산이<br />
+            풍부한 올리브유를 넣어서<br />
+            보습 효과도 뛰어나답니다.
           </p>
         </div>
       </div>
+    </div>
 
-      <div id="farm2">
-        <div class="farm2-left"></div>
-        <div class="scarecrow"></div>
-        <div class="farm2-right"></div>
+    <div id="night1">
+      <div class="owl"></div>
+      <div class="star-wrap">
+        <div class="star1"></div>
+        <div class="star2"></div>
+        <div class="star3"></div>
       </div>
-
-      <div id="farm3">
-        <div class="farm3-window"></div>
-        <div class="machine-wrap">
-          <div class="farm3-machine"></div>
-          <div class="saw-shadow"></div>
-          <div class="saw1"></div>
-          <div class="saw2"></div>
-          <div class="machine-bird"></div>
-          <div class="timer"></div>
-        </div>
-        <img
-          class="farm3-bubble"
-          src="./img/farm/farm3/farm3bubble.png"
-          alt="기계를 통해서 쌀알이 딱딱한 껍질을 벗어 냅니다."
-        />
-      </div>
-    </header>
+    </div>
   </body>
 </html>
