Finalized kidsgao practice

--- a/10-kidsgao/index.html
+++ b/10-kidsgao/index.html
@@ -138,5 +138,78 @@
         <div class="star3"></div>
       </div>
     </div>
+
+    <!-- night2 -->
+    <div id="night2">
+      <div class="moon"></div>
+      <img
+        class="night2-bubble"
+        src="img/oneday/night2/night2bubble.png"
+        alt="하루동안 숙성을 시키게 됩니다."
+      />
+      <div class="night2-tree"></div>
+    </div>
+
+    <!-- morning -->
+    <div id="morning">
+      <div class="sun"></div>
+      <div class="left-pine"></div>
+      <div class="right-pine"></div>
+    </div>
+
+    <div id="kitchen">
+      <div class="kitchen-left"></div>
+      <div class="kitchen-right"></div>
+      <div class="kitchen-center">
+        <div class="kitchen-steam"></div>
+        <div class="kitchen-smoke"></div>
+      </div>
+      <img
+        class="kitchen-bubble"
+        src="img/kitchen/kitchenbubble.png"
+        alt="숙성을 시킨 반죽을 잘
+      익혀주면"
+      />
+    </div>
+
+    <!-- color1 -->
+    <div id="color1">
+      <div class="penguin"></div>
+      <img
+        class="color1-bubble"
+        src="img/color/color1/color1bubble.png"
+        alt="말랑말랑 키즈가오 완성"
+      />
+    </div>
+
+    <!-- color2 -->
+    <div id="color2">
+      <div class="horse"></div>
+      <div class="color2-left">
+        <img
+          class="color2-bubble"
+          src="img/color/color2/color2bubble.png"
+          alt="색상을 선택해 보세요"
+        />
+        <div class="btn-wrap">
+          <button type="button" class="red"></button>
+          <button type="button" class="yellow"></button>
+          <button type="button" class="blue"></button>
+        </div>
+
+        <p class="color2-comment">
+          아이가 원하는 색상을 직접 만들며 색감을 스스로 발달시킵니다.<br />
+          색이 잘 섞이므로 누구나 쉽게 다양한 색을 만들 수 있습니다.
+        </p>
+      </div>
+    </div>
+
+    <!-- color3 -->
+    <div id="color3">
+      <div class="flag"></div>
+      <div class="books"></div>
+      <img class="logo" src="img/color/color3/logo.png" alt="" />
+      <div class="dice"></div>
+    </div>
   </body>
 </html>
