--- a/11-helbak/index.html
+++ b/11-helbak/index.html
@@ -36,5 +36,78 @@
         </ul>
       </nav>
     </header>
+
+    <main class="items" role="main">
+      <ul class="item-group">
+        <li>
+          <a class="item-link" href="#">
+            <article>
+              <h2 class="item-name">Product 1</h2>
+              <img src="https://via.placeholder.com/1000x563" alt="Product 1" />
+            </article>
+          </a>
+        </li>
+        <li>
+          <a class="item-link" href="#">
+            <article>
+              <h2 class="item-name">Product 2</h2>
+              <img src="https://via.placeholder.com/1000x563" alt="Product 2" />
+            </article>
+        </li>
+        <li>
+          <a class="item-link" href="#">
+            <article>
+              <h2 class="item-name">Product 3</h2>
+              <img src="https://via.placeholder.com/1000x563" alt="Product 3" />
+            </article>
+          </a>
+        </li>
+        <li>
+          <a class="item-link" href="#">
+            <article>
+              <h2 class="item-name">Product 4</h2>
+              <img src="https://via.placeholder.com/1000x563" alt="Product 4" />
+            </article>
+          </a>
+        </li>
+        <li>
+          <a class="item-link" href="#">
+            <article>
+              <h2 class="item-name">Product 5</h2>
+              <img src="https://via.placeholder.com/1000x563" alt="Product 5" />
+            </article>
+          </a>
+        </li>
+        <li>
+          <a class="item-link" href="#">
+            <article>
+              <h2 class="item-name">Product 6</h2>
+              <img src="https://via.placeholder.com/1000x563" alt="Product 6" />
+            </article>
+          </a>
+        </li>
+      </ul>
+    </main>
+
+    <footer id="footer">
+      <nav class="nav-left">
+        <ul>
+          <li><a href="#">Terms and conditions</a></li>
+          <li><a href="#">Cookies</a></li>
+        </ul>
+      </nav>
+      <nav class="nav-right">
+        <h3>Accepted payment methods</h3>
+        <ul>
+          <li><span class="payment-icon one"></span></li>
+          <li><span class="payment-icon two"></span></li>
+          <li><span class="payment-icon three"></span></li>
+          <li><span class="payment-icon four"></span></li>
+          <li><span class="payment-icon five"></span></li>
+        </ul>
+      </nav>
+
+      <a class="to-top" href="#"></a>
+    </footer>
   </body>
 </html>
