Finished right section

--- a/13-naver-practice/index.html
+++ b/13-naver-practice/index.html
@@ -225,7 +225,136 @@
           </div>
         </div>
       </div>
-      <div id="main-right"></div>
+      <div id="main-right">
+        <div class="account-wrap">
+          <p>네이버를 더 안전하고 편안하게 이용하세요.</p>
+          <a href="#">NAVER 로그인</a>
+          <div class="account-sub">
+            <div class="sub-left">
+              <span>아이디</span>
+              <span>비밀번호 찾기</span>
+            </div>
+            <span>회원가입</span>
+          </div>
+        </div>
+
+        <div class="banner-right">광고</div>
+
+        <div id="shop-wrap">
+          <div class="shop-header">
+            <h3><a href="#">트렌트 쇼핑</a></h3>
+            <div class="shop-header-right">
+              <h4><a href="#">상품</a></h4>
+              <h4><a href="#">쇼핑몰</a></h4>
+              <h4><a href="#">MEN</a></h4>
+            </div>
+          </div>
+
+          <div class="shop-content">
+            <div class="shop-list">
+              <ul>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+                <li><a href="#">G마켓</a></li>
+              </ul>
+            </div>
+            <div class="product-list">
+              <ul>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="https://via.placeholder.com/107x146" alt="" />
+                    <div class="product-info">
+                      <h3>퀄리티가 중요한</h3>
+                      <span>당신을 위한 룩</span>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
