--- a/13-naver-practice/index.html
+++ b/13-naver-practice/index.html
@@ -356,5 +356,92 @@
         </div>
       </div>
     </main>
+    <footer id="footer">
+      <ul class="container">
+        <li>
+          <img src="https://via.placeholder.com/160x86" alt="" />
+          <div class="news-info">
+            <span>부스트캠프 2021</span>
+            <h3>온라인 설명회 신청하기</h3>
+            <p>
+              SW 개발자를 위한 교육<br />
+              지원꿀팁과 생생한 후기들
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/160x86" alt="" />
+          <div class="news-info">
+            <span>부스트캠프 2021</span>
+            <h3>온라인 설명회 신청하기</h3>
+            <p>
+              SW 개발자를 위한 교육<br />
+              지원꿀팁과 생생한 후기들
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/160x86" alt="" />
+          <div class="news-info">
+            <span>부스트캠프 2021</span>
+            <h3>온라인 설명회 신청하기</h3>
+            <p>
+              SW 개발자를 위한 교육<br />
+              지원꿀팁과 생생한 후기들
+            </p>
+          </div>
+        </li>
+      </ul>
+      <ul class="corp-list container">
+        <li><a href="#">회사소개</a></li>
+        <li><a href="#">인재채용</a></li>
+        <li><a href="#">제휴제안</a></li>
+        <li><a href="#">회사소개</a></li>
+        <li><a href="#">인재채용</a></li>
+        <li><a href="#">제휴제안</a></li>
+      </ul>
+    </footer>
+
+    <!-- <footer id="footer">
+      <div class="container">
+        <ul class="news-list">
+          <li>
+            <img src="https://via.placeholder.com/160x86" alt="" />
+            <div class="news-info">
+              <span>부스트캠프 2021</span>
+              <h3>온라인 설명회 신청하기</h3>
+              <p>
+                SW 개발자를 위한 교육<br />
+                지원꿀팁과 생생한 후기들
+              </p>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/160x86" alt="" />
+            <div class="news-info">
+              <span>부스트캠프 2021</span>
+              <h3>온라인 설명회 신청하기</h3>
+              <p>
+                SW 개발자를 위한 교육<br />
+                지원꿀팁과 생생한 후기들
+              </p>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/160x86" alt="" />
+            <div class="news-info">
+              <span>부스트캠프 2021</span>
+              <h3>온라인 설명회 신청하기</h3>
+              <p>
+                SW 개발자를 위한 교육<br />
+                지원꿀팁과 생생한 후기들
+              </p>
+            </div>
+          </li>
+        </ul>
+
+        
+      </div>
+    </footer> -->
   </body>
 </html>
