Updated naver shopping class

--- a/13-naver-practice/index.html
+++ b/13-naver-practice/index.html
@@ -24,7 +24,7 @@
             <li><a href="#">카페</a></li>
             <li><a href="#">블로그</a></li>
             <li><a href="#">지식iN</a></li>
-            <li><a href="#">쇼핑</a></li>
+            <li><a href="shop.html">쇼핑</a></li>
           </ul>
         </div>
       </div>
@@ -245,7 +245,7 @@
             <h3><a href="#">트렌트 쇼핑</a></h3>
             <div class="shop-header-right">
               <h4><a href="#">상품</a></h4>
-              <h4><a href="#">쇼핑몰</a></h4>
+              <h4><a href="">쇼핑몰</a></h4>
               <h4><a href="#">MEN</a></h4>
             </div>
           </div>
