--- a/13-naver-practice/shop.html
+++ b/13-naver-practice/shop.html
@@ -75,7 +75,60 @@
         <div class="list-item banner">
           <a href=""><img src="https://via.placeholder.com/150" alt="" /></a>
         </div>
-        <div class="list-item"></div>
+
+        <div class="list-item">
+          <div class="list-half">
+            <div class="list-half-top">
+              <div class="list-half-header bg">
+                <div class="half-overlay"></div>
+                <h3 class="half-top-title">백화점 상품 그대로</h3>
+              </div>
+              <ul class="content-list-3">
+                <li>
+                  <img src="https://via.placeholder.com/102x100" alt="" />
+                  <h3>생활공작서 과탄산소다</h3>
+                  <span>1.5kg x 4입</span>
+                </li>
+                <li>
+                  <img src="https://via.placeholder.com/102x100" alt="" />
+                  <h3>생활공작서 과탄산소다</h3>
+                  <span>1.5kg x 4입</span>
+                </li>
+                <li>
+                  <img src="https://via.placeholder.com/102x100" alt="" />
+                  <h3>생활공작서 과탄산소다</h3>
+                  <span>1.5kg x 4입</span>
+                </li>
+              </ul>
+            </div>
+
+            <div class="list-half-bottom">
+              <div class="list-half-header">
+                <span>HOT DEAL</span>
+                <h3>놓치면 후회할 럭키투데이</h3>
+              </div>
+              <ul class="content-list-2">
+                <li>
+                  <div class="content-wrap">
+                    <img src="https://via.placeholder.com/130x90" alt="" />
+                    <span class="discount">50%</span>
+                  </div>
+                  <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                  <span><em>21,900</em>원</span>
+                </li>
+                <li>
+                  <div class="content-wrap">
+                    <img src="https://via.placeholder.com/130x90" alt="" />
+                    <span class="discount">50%</span>
+                  </div>
+                  <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                  <span><em>21,900</em>원</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
         <div class="list-item"></div>
       </div>
     </main>
