Finished Naver Shopping

--- a/13-naver-practice/shop.html
+++ b/13-naver-practice/shop.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="list-item banner">
-          <a href=""><img src="https://via.placeholder.com/150" alt="" /></a>
+          <a href=""><img src="" alt="" /></a>
         </div>
 
         <div class="list-item">
@@ -418,5 +418,27 @@
         </div>
       </div>
     </main>
+
+    <footer id="footer">
+      <div class="some-space">
+        <h2>공지사항</h2>
+      </div>
+      <div class="policy-wrap">
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+        <span><a href="#">네이버 이용약관</a></span>
+      </div>
+      <p>
+        네이버㈜는 통신판매중개자이며, 통신판매의 당사자가 아닙니다. 상품,
+        상품정보, 거래에 관한 의무와 책임은 판매자에게 있습니다.
+      </p>
+    </footer>
   </body>
 </html>
