--- a/13-naver-practice/webtoon-home.html
+++ b/13-naver-practice/webtoon-home.html
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/webtoon.css" />
+    <script
+      src="https://kit.fontawesome.com/6e4612a324.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header id="webtoon-header">
       <div class="webtoon-header-top">
         <div class="webtoon-container">
           <div class="webtoon-header-left">
-            <h2><a href="#">만화</a></h2>
+            <h2><a href="./index.html">NAVER</a><a href="#">만화</a></h2>
             <em class="bar"></em>
             <h3><a href="#">웹소설</a></h3>
 
             <div class="webtoon-header-input-wrap">
-              <input type="text" />
-              <button type="button" class="btn-search"></button>
+              <input
+                type="text"
+                placeholder="제목/작가로 검색할 수 있습니다."
+              />
+              <button type="button" class="btn-search">
+                <i class="fas fa-search"></i>
+              </button>
             </div>
           </div>
 
@@ -76,8 +85,12 @@
                   <li><img src="https://via.placeholder.com/135x57" /></li>
                 </ul>
 
-                <a href="#" class="btn btn-prev"></a>
-                <a href="#" class="btn btn-next"></a>
+                <a href="#" class="btn btn-prev"
+                  ><i class="fas fa-chevron-left"></i
+                ></a>
+                <a href="#" class="btn btn-next"
+                  ><i class="fas fa-chevron-right"></i
+                ></a>
               </div>
             </div>
           </div>
