--- a/13-naver-practice/webtoon.html
+++ b/13-naver-practice/webtoon.html
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webtoon</title>
     <link rel="stylesheet" href="./css/webtoon.css" />
+    <script
+      src="https://kit.fontawesome.com/6e4612a324.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header id="webtoon-header">
       <div class="webtoon-header-top">
         <div class="webtoon-container">
           <div class="webtoon-header-left">
-            <h2><a href="#">만화</a></h2>
+            <h2><a href="./index.html">NAVER</a><a href="#">만화</a></h2>
             <em class="bar"></em>
             <h3><a href="#">웹소설</a></h3>
 
             <div class="webtoon-header-input-wrap">
-              <input type="text" />
-              <button type="button" class="btn-search"></button>
+              <input
+                type="text"
+                placeholder="제목/작가로 검색할 수 있습니다."
+              />
+              <button type="button" class="btn-search">
+                <i class="fas fa-search"></i>
+              </button>
             </div>
           </div>
 
@@ -33,8 +42,8 @@
         <div class="webtoon-container">
           <nav>
             <ul>
-              <li><a href="webtoon-home.html">홈</a></li>
-              <li class="on"><a href="webtoon.html">웹툰</a></li>
+              <li><a href="./webtoon-home.html">홈</a></li>
+              <li class="on"><a href="./webtoon.html">웹툰</a></li>
               <li><a href="#">베스트 도전</a></li>
               <li><a href="#">도전만화</a></li>
             </ul>
