--- a/13-naver-practice/index.html
+++ b/13-naver-practice/index.html
@@ -22,7 +22,7 @@
           <ul>
             <li><a href="#">메일</a></li>
             <li><a href="#">카페</a></li>
-            <li><a href="#">블로그</a></li>
+            <li><a href="blog.html">블로그</a></li>
             <li><a href="#">지식iN</a></li>
             <li><a href="shop.html">쇼핑</a></li>
             <li><a href="webtoon-home.html">웹툰</a></li>
