Updated few design changes

--- a/13-naver-practice/blog.html
+++ b/13-naver-practice/blog.html
@@ -21,7 +21,9 @@
             <div class="blog-header-input-wrap">
               <div class="blog-search-wrap">
                 <input type="text" />
-                <button type="button" class="btn-search"></button>
+                <button type="button" class="btn-search">
+                  <i class="fas fa-search"></i>
+                </button>
               </div>
               <button type="button" class="btn-total-search">통합 검색</button>
             </div>
@@ -29,7 +31,9 @@
 
           <div class="blog-header-right">
             <a href="#" class="btn-login">로그인</a>
-            <button type="button" class="btn-menu"></button>
+            <button type="button" class="btn-menu">
+              <i class="fas fa-bars"></i>
+            </button>
           </div>
         </div>
       </div>
