--- a/13-naver-practice/blog-detail.html
+++ b/13-naver-practice/blog-detail.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/blog.css" />
+    <script
+      src="https://kit.fontawesome.com/6e4612a324.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header id="blog-header">
       <div class="blog-header-top">
         <div class="blog-container">
           <div class="blog-header-left">
-            <h2><a href="./blog.html">블로그</a></h2>
+            <h2><a href="#">블로그</a></h2>
 
             <div class="blog-header-input-wrap">
               <div class="blog-search-wrap">
                 <input type="text" />
-                <button type="button" class="btn-search"></button>
+                <button type="button" class="btn-search">
+                  <i class="fas fa-search"></i>
+                </button>
               </div>
               <button type="button" class="btn-total-search">통합 검색</button>
             </div>
@@ -25,7 +31,9 @@
 
           <div class="blog-header-right">
             <a href="#" class="btn-login">로그인</a>
-            <button type="button" class="btn-menu"></button>
+            <button type="button" class="btn-menu">
+              <i class="fas fa-bars"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -125,7 +133,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -133,7 +141,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -141,7 +149,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -149,7 +157,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -157,7 +165,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -165,65 +173,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-
-            <li class="program-day-list">
-              <div class="program-day-title-wrap">
-                <span class="date">5월 18일</span>
-                <span class="txt">우리 동네 자랑</span>
-                <span class="msg">공원이 있고 강이 보이는 우리 동네~</span>
-              </div>
-
-              <ul class="program-image-lists">
-                <li class="blog-border">
-                  <a href="#">
-                    <img src="https://via.placeholder.com/170x130" />
-                    <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
-                  </a>
-                </li>
-
-                <li class="blog-border">
-                  <a href="#">
-                    <img src="https://via.placeholder.com/170x130" />
-                    <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
-                  </a>
-                </li>
-
-                <li class="blog-border">
-                  <a href="#">
-                    <img src="https://via.placeholder.com/170x130" />
-                    <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
-                  </a>
-                </li>
-
-                <li class="blog-border">
-                  <a href="#">
-                    <img src="https://via.placeholder.com/170x130" />
-                    <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
-                  </a>
-                </li>
-
-                <li class="blog-border">
-                  <a href="#">
-                    <img src="https://via.placeholder.com/170x130" />
-                    <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
-                  </a>
-                </li>
-
-                <li class="blog-border">
-                  <a href="#">
-                    <img src="https://via.placeholder.com/170x130" />
-                    <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
               </ul>
@@ -241,7 +191,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -249,7 +199,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -257,7 +207,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -265,7 +215,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -273,7 +223,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -281,7 +231,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
               </ul>
@@ -299,7 +249,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -307,7 +257,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -315,7 +265,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -323,7 +273,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -331,7 +281,7 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
                   </a>
                 </li>
 
@@ -339,7 +289,65 @@
                   <a href="#">
                     <img src="https://via.placeholder.com/170x130" />
                     <h4>우리 동네는 매력적이다.</h4>
-                    <span>김인권</span>
+                    <span>최원석</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="program-day-list">
+              <div class="program-day-title-wrap">
+                <span class="date">5월 18일</span>
+                <span class="txt">우리 동네 자랑</span>
+                <span class="msg">공원이 있고 강이 보이는 우리 동네~</span>
+              </div>
+
+              <ul class="program-image-lists">
+                <li class="blog-border">
+                  <a href="#">
+                    <img src="https://via.placeholder.com/170x130" />
+                    <h4>우리 동네는 매력적이다.</h4>
+                    <span>최원석</span>
+                  </a>
+                </li>
+
+                <li class="blog-border">
+                  <a href="#">
+                    <img src="https://via.placeholder.com/170x130" />
+                    <h4>우리 동네는 매력적이다.</h4>
+                    <span>최원석</span>
+                  </a>
+                </li>
+
+                <li class="blog-border">
+                  <a href="#">
+                    <img src="https://via.placeholder.com/170x130" />
+                    <h4>우리 동네는 매력적이다.</h4>
+                    <span>최원석</span>
+                  </a>
+                </li>
+
+                <li class="blog-border">
+                  <a href="#">
+                    <img src="https://via.placeholder.com/170x130" />
+                    <h4>우리 동네는 매력적이다.</h4>
+                    <span>최원석</span>
+                  </a>
+                </li>
+
+                <li class="blog-border">
+                  <a href="#">
+                    <img src="https://via.placeholder.com/170x130" />
+                    <h4>우리 동네는 매력적이다.</h4>
+                    <span>최원석</span>
+                  </a>
+                </li>
+
+                <li class="blog-border">
+                  <a href="#">
+                    <img src="https://via.placeholder.com/170x130" />
+                    <h4>우리 동네는 매력적이다.</h4>
+                    <span>최원석</span>
                   </a>
                 </li>
               </ul>
