--- a/13-naver-practice/index.html
+++ b/13-naver-practice/index.html
@@ -26,6 +26,7 @@
             <li><a href="#">지식iN</a></li>
             <li><a href="shop.html">쇼핑</a></li>
             <li><a href="webtoon-home.html">웹툰</a></li>
+            <li><a href="news.html">뉴스</a></li>
           </ul>
         </div>
       </div>
