Removed Ent files

--- a/13-naver-practice/news.html
+++ b/13-naver-practice/news.html
@@ -456,7 +456,7 @@
             </ul>
           </div>
 
-          <div class="news-banner"></div>
+          <div class="news-banner">광 고</div>
 
           <div id="news-today">
             <div class="news-today-header news-flex-start">
