Finished Naver News page

--- a/13-naver-practice/news.html
+++ b/13-naver-practice/news.html
@@ -225,7 +225,7 @@
                 <ul class="news-flex-start">
                   <li><a href="#">일반</a></li>
                   <li><a href="#">국회/정당</a></li>
-                  <li><a href="#">청화대</a></li>
+                  <li><a href="#">청와대</a></li>
                 </ul>
               </div>
 
@@ -251,10 +251,22 @@
                     title 1 title 1 title 1</a
                   ><span>국민일보</span>
                 </li>
-                <li><a href="#">title 2</a><span>한겨레</span></li>
-                <li><a href="#">title 3</a><span>뉴시스</span></li>
-                <li><a href="#">title 3</a><span>중앙일보</span></li>
-                <li><a href="#">title 3</a><span>부산일보</span></li>
+                <li>
+                  <a href="#">title 2</a
+                  ><span><i class="fas fa-camera"></i>한겨레</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>뉴시스</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>중앙일보</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>부산일보</span>
+                </li>
               </ul>
             </div>
           </div>
@@ -266,7 +278,7 @@
                 <ul class="news-flex-start">
                   <li><a href="#">일반</a></li>
                   <li><a href="#">국회/정당</a></li>
-                  <li><a href="#">청화대</a></li>
+                  <li><a href="#">청와대</a></li>
                 </ul>
               </div>
 
@@ -292,10 +304,22 @@
                     title 1 title 1 title 1</a
                   ><span>국민일보</span>
                 </li>
-                <li><a href="#">title 2</a><span>한겨레</span></li>
-                <li><a href="#">title 3</a><span>뉴시스</span></li>
-                <li><a href="#">title 3</a><span>중앙일보</span></li>
-                <li><a href="#">title 3</a><span>부산일보</span></li>
+                <li>
+                  <a href="#">title 2</a
+                  ><span><i class="fas fa-camera"></i>한겨레</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>뉴시스</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>중앙일보</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>부산일보</span>
+                </li>
               </ul>
             </div>
           </div>
@@ -307,7 +331,7 @@
                 <ul class="news-flex-start">
                   <li><a href="#">일반</a></li>
                   <li><a href="#">국회/정당</a></li>
-                  <li><a href="#">청화대</a></li>
+                  <li><a href="#">청와대</a></li>
                 </ul>
               </div>
 
@@ -333,10 +357,22 @@
                     title 1 title 1 title 1</a
                   ><span>국민일보</span>
                 </li>
-                <li><a href="#">title 2</a><span>한겨레</span></li>
-                <li><a href="#">title 3</a><span>뉴시스</span></li>
-                <li><a href="#">title 3</a><span>중앙일보</span></li>
-                <li><a href="#">title 3</a><span>부산일보</span></li>
+                <li>
+                  <a href="#">title 2</a
+                  ><span><i class="fas fa-camera"></i>한겨레</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>뉴시스</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>중앙일보</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>부산일보</span>
+                </li>
               </ul>
             </div>
           </div>
@@ -369,10 +405,22 @@
                     title 1 title 1 title 1</a
                   ><span>국민일보</span>
                 </li>
-                <li><a href="#">title 2</a><span>한겨레</span></li>
-                <li><a href="#">title 3</a><span>뉴시스</span></li>
-                <li><a href="#">title 3</a><span>중앙일보</span></li>
-                <li><a href="#">title 3</a><span>부산일보</span></li>
+                <li>
+                  <a href="#">title 2</a
+                  ><span><i class="fas fa-camera"></i>한겨레</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>뉴시스</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>중앙일보</span>
+                </li>
+                <li>
+                  <a href="#">title 3</a
+                  ><span><i class="fas fa-camera"></i>부산일보</span>
+                </li>
               </ul>
             </div>
           </div>
@@ -485,18 +533,20 @@
                   <li>
                     <span>코스피</span>
                     <h3>3,162.28</h3>
-                    <em class="down">10.77</em>
+                    <i class="fas fa-sort-down"></i><em class="down">10.77</em>
                   </li>
                   <li>
                     <span>코스닥</span>
                     <h3>971.13</h3>
-                    <em class="up">2.03</em>
+                    <i class="fas fa-sort-up"></i><em class="up">2.03</em>
                   </li>
                 </ul>
 
                 <div class="news-stock-search-wrap news-flex-between">
                   <input type="" placeholder="종목 검색" />
-                  <button type="button" class="btn-search"></button>
+                  <button type="button" class="btn-search">
+                    <i class="fas fa-search"></i>
+                  </button>
                 </div>
               </div>
             </div>
