Uploaded Naver Ent

--- a/13-naver-practice/ent.html
+++ b/13-naver-practice/ent.html
@@ -11,6 +11,12 @@
       crossorigin="anonymous"
     ></script>
   </head>
+  <!-- 추가할 것
+  header에 네이버 홈 버튼 추가하기
+  광고 수정하기
+  arrow icon 추가하기
+  play버튼 추가하기
+   -->
   <body>
     <header id="ent-header">
       <div class="ent-flex-between">
