--- a/13-naver-practice/ent.html
+++ b/13-naver-practice/ent.html
@@ -11,17 +11,13 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <!-- 추가할 것
-  header에 네이버 홈 버튼 추가하기
-  광고 수정하기
-  arrow icon 추가하기
-  play버튼 추가하기
-   -->
+
   <body>
     <header id="ent-header">
       <div class="ent-flex-between">
         <div class="ent-header-left">
           <ul class="ent-flex-start">
+            <li><a href="index.html">NAVER</a></li>
             <li><a href="#">TV연예</a></li>
             <li><a href="news.html">뉴스</a></li>
           </ul>
@@ -60,7 +56,7 @@
                   <div class="media-top">
                     <img src="https://via.placeholder.com/148x145" />
                     <span class="time">03:02</span>
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <div class="media-bottom">
                     <p>[신곡 MV] BTS (방탄소년단)......</p>
@@ -73,7 +69,7 @@
                   <div class="media-top">
                     <img src="https://via.placeholder.com/148x145" />
                     <span class="time">03:02</span>
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <div class="media-bottom">
                     <p>[신곡 MV] BTS (방탄소년단)......</p>
@@ -86,7 +82,7 @@
                   <div class="media-top">
                     <img src="https://via.placeholder.com/148x145" />
                     <span class="time">03:02</span>
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <div class="media-bottom">
                     <p>[신곡 MV] BTS (방탄소년단)......</p>
@@ -99,7 +95,7 @@
                   <div class="media-top">
                     <img src="https://via.placeholder.com/148x145" />
                     <span class="time">03:02</span>
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <div class="media-bottom">
                     <p>[신곡 MV] BTS (방탄소년단)......</p>
@@ -195,8 +191,12 @@
                 </div>
 
                 <div class="btn-wrap ent-flex-end">
-                  <button class="btn btn-prev"></button>
-                  <button class="btn btn-next"></button>
+                  <button class="btn btn-prev">
+                    <i class="fas fa-chevron-left"></i>
+                  </button>
+                  <button class="btn btn-next">
+                    <i class="fas fa-chevron-right"></i>
+                  </button>
                 </div>
               </div>
             </div>
@@ -385,7 +385,7 @@
                 <a href="#">
                   <div class="img-wrap">
                     <img src="https://via.placeholder.com/148x85" />
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <h4>
                     동해물과 백두산이 동해물과 백두산이 동해물과 백두산이
@@ -402,7 +402,7 @@
                 <a href="#">
                   <div class="img-wrap">
                     <img src="https://via.placeholder.com/148x85" />
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <h4>
                     동해물과 백두산이 동해물과 백두산이 동해물과 백두산이
@@ -419,7 +419,7 @@
                 <a href="#">
                   <div class="img-wrap">
                     <img src="https://via.placeholder.com/148x85" />
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <h4>
                     동해물과 백두산이 동해물과 백두산이 동해물과 백두산이
@@ -436,7 +436,7 @@
                 <a href="#">
                   <div class="img-wrap">
                     <img src="https://via.placeholder.com/148x85" />
-                    <i class="icon-play"></i>
+                    <i class="icon-play"><i class="fas fa-play"></i></i>
                   </div>
                   <h4>
                     동해물과 백두산이 동해물과 백두산이 동해물과 백두산이
@@ -748,7 +748,7 @@
         </div>
 
         <div class="ent-right">
-          <div class="ent-banner"></div>
+          <div class="ent-banner">광 고</div>
 
           <div id="ent-section-10">
             <div class="title-wrap ent-flex-between">
@@ -829,7 +829,9 @@
                       <span class="count">14</span>
                       <h3>타이틀 1</h3>
                     </div>
-                    <div class="icon-arrow"></div>
+                    <div class="icon-arrow">
+                      <i class="fas fa-chevron-right"></i>
+                    </div>
                   </div>
 
                   <div class="article-content ent-flex-between">
@@ -851,7 +853,9 @@
                       <span class="count">14</span>
                       <h3>타이틀 1</h3>
                     </div>
-                    <div class="icon-arrow"></div>
+                    <div class="icon-arrow">
+                      <i class="fas fa-chevron-right"></i>
+                    </div>
                   </div>
 
                   <div class="article-content ent-flex-between">
@@ -873,7 +877,9 @@
                       <span class="count">14</span>
                       <h3>타이틀 1</h3>
                     </div>
-                    <div class="icon-arrow"></div>
+                    <div class="icon-arrow">
+                      <i class="fas fa-chevron-right"></i>
+                    </div>
                   </div>
 
                   <div class="article-content ent-flex-between">
@@ -892,8 +898,12 @@
 
             <div class="bottom ent-flex-between">
               <div class="btn-wrap ent-flex-start">
-                <button class="btn btn-prev"></button>
-                <button class="btn btn-next"></button>
+                <button class="btn btn-prev">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="btn btn-next">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
               </div>
               <a href="#" class="more">더보기</a>
             </div>
