Modified with some design changes

--- a/13-naver-practice/game.html
+++ b/13-naver-practice/game.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game</title>
     <link rel="stylesheet" href="./css/game.css" />
+    <script
+      src="https://kit.fontawesome.com/6e4612a324.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <!--
-  Naver 링크 만들기
-  event 내 글씨 white로
-  광고 표시해주기
-  각종 아이콘들 추가하기
-  header 바로 아래 margin-bottom띠위로 간격 주기
-  header에 로그인 쪽 아이콘 추가하기, 그리고 말풍선 수정해보기
-  -->
   <body id="game-body">
     <header id="game-header">
       <div class="game-container">
         <nav class="game-flex-between">
           <div class="left game-flex-start">
+            <h1>
+              <a href="index.html">NAVER</a>
+            </h1>
             <h1>
               <a href="#">GAME</a>
             </h1>
@@ -37,7 +36,9 @@
             </div>
 
             <div class="ticket-wrap">
-              <a href="#" class="btn-ticket"></a>
+              <a href="#" class="btn-ticket"
+                ><i class="fas fa-ticket-alt"></i
+              ></a>
               <p class="bubble-msg">응모 티켓 받고 꿀템 도전!</p>
             </div>
 
@@ -83,9 +84,7 @@
       <div class="game-container game-flex-between">
         <div class="left">
           <div class="left-banner game-shadow">
-            <a href="#">
-              <img src="https://via.placeholder.com/900x120" />
-            </a>
+            <a href="#"> 광 고 </a>
           </div>
 
           <div id="game-section-1" class="game-section">
@@ -297,7 +296,9 @@
               </li>
             </ol>
 
-            <a href="#" class="btn-circle icon-arrow"></a>
+            <a href="#" class="btn-circle icon-arrow"
+              ><i class="fas fa-chevron-up"></i
+            ></a>
           </div>
 
           <div id="game-section-2" class="game-section">
@@ -456,7 +457,9 @@
               </div>
             </div>
 
-            <a href="#" class="btn-circle icon-plus"></a>
+            <a href="#" class="btn-circle icon-plus"
+              ><i class="fas fa-plus"></i
+            ></a>
           </div>
 
           <div id="game-section-4" class="game-section">
@@ -668,7 +671,9 @@
               </ol>
             </div>
 
-            <a href="#" class="btn-circle icon-plus"></a>
+            <a href="#" class="btn-circle icon-plus">
+              <i class="fas fa-plus"></i>
+            </a>
           </div>
 
           <div id="game-section-6" class="game-section">
@@ -768,7 +773,9 @@
               </div>
             </div>
 
-            <a href="#" class="btn-circle icon-plus"></a>
+            <a href="#" class="btn-circle icon-plus">
+              <i class="fas fa-plus"></i>
+            </a>
           </div>
         </div>
 
@@ -784,7 +791,7 @@
                 <p>관심있는 게임을 검색해보세요.</p>
                 <div class="input-wrap game-flex-start">
                   <input type="" placeholder="라운지 검색" />
-                  <button type="button"></button>
+                  <button type="button"><i class="fas fa-search"></i></button>
                 </div>
               </div>
             </div>
@@ -808,7 +815,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -827,7 +834,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -845,7 +852,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -863,7 +870,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -881,7 +888,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -913,7 +920,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -932,7 +939,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -950,7 +957,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -968,7 +975,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
@@ -986,7 +993,7 @@
 
                   <div class="image-wrap">
                     <img src="https://via.placeholder.com/55" />
-                    <i class="chk"></i>
+                    <i class="chk"><i class="fas fa-plus"></i></i>
                   </div>
 
                   <div class="txt-wrap">
