--- a/13-naver-practice/e-sport.html
+++ b/13-naver-practice/e-sport.html
@@ -17,6 +17,7 @@
         <div class="esport-container">
           <div class="nav-wrap esport-flex-between">
             <div class="left esport-flex-start">
+              <h1><a href="index.html">NAVER</a></h1>
               <h1><a href="#">e스포츠</a></h1>
               <ul class="esport-flex-start">
                 <li><a href="#">GAME</a></li>
@@ -47,6 +48,11 @@
       <div id="esport-main-top">
         <div class="esport-container">
           <div class="timeline-wrap">
+            <a href="#">
+              <div class="timeline-wrap-first">
+                <i class="fas fa-chevron-left"></i>
+              </div>
+            </a>
             <ul class="esport-flex-start">
               <li>
                 <a href="#">
@@ -115,6 +121,11 @@
                 </a>
               </li>
             </ul>
+            <a href="#">
+              <div class="timeline-wrap-second">
+                <i class="fas fa-chevron-right"></i>
+              </div>
+            </a>
           </div>
 
           <div class="live-wrap">
@@ -213,7 +224,7 @@
                       <img src="https://via.placeholder.com/285x160" />
 
                       <div class="status-wrap esport-flex-between">
-                        <i></i>
+                        <i class="fas fa-play"></i>
                         <span class="time">56:01</span>
                       </div>
                     </div>
@@ -226,7 +237,7 @@
                       <img src="https://via.placeholder.com/285x160" />
 
                       <div class="status-wrap esport-flex-between">
-                        <i></i>
+                        <i class="fas fa-play"></i>
                         <span class="time">56:01</span>
                       </div>
                     </div>
@@ -239,7 +250,7 @@
                       <img src="https://via.placeholder.com/285x160" />
 
                       <div class="status-wrap esport-flex-between">
-                        <i></i>
+                        <i class="fas fa-play"></i>
                         <span class="time">56:01</span>
                       </div>
                     </div>
@@ -252,7 +263,7 @@
                       <img src="https://via.placeholder.com/285x160" />
 
                       <div class="status-wrap esport-flex-between">
-                        <i></i>
+                        <i class="fas fa-play"></i>
                         <span class="time">56:01</span>
                       </div>
                     </div>
@@ -265,7 +276,7 @@
                       <img src="https://via.placeholder.com/285x160" />
 
                       <div class="status-wrap esport-flex-between">
-                        <i></i>
+                        <i class="fas fa-play"></i>
                         <span class="time">56:01</span>
                       </div>
                     </div>
@@ -278,7 +289,7 @@
                       <img src="https://via.placeholder.com/285x160" />
 
                       <div class="status-wrap esport-flex-between">
-                        <i></i>
+                        <i class="fas fa-play"></i>
                         <span class="time">56:01</span>
                       </div>
                     </div>
@@ -535,9 +546,13 @@
 
               <div class="schedule-wrap">
                 <div class="schedule-header esport-flex-between">
-                  <button class="arrow arrow-left"></button>
+                  <button class="arrow arrow-left">
+                    <i class="fas fa-chevron-left"></i>
+                  </button>
                   <span>06.05 토</span>
-                  <button class="arrow arrow-right"></button>
+                  <button class="arrow arrow-right">
+                    <i class="fas fa-chevron-right"></i>
+                  </button>
                 </div>
 
                 <div class="schedule-body">
