Initialized Naver Audio Clip

--- a/13-naver-practice/index.html
+++ b/13-naver-practice/index.html
@@ -23,7 +23,7 @@
             <li><a href="#">메일</a></li>
             <li><a href="#">카페</a></li>
             <li><a href="blog.html">블로그</a></li>
-            <li><a href="#">지식iN</a></li>
+            <li><a href="audio.html">오디오</a></li>
             <li><a href="shop.html">쇼핑</a></li>
             <li><a href="webtoon-home.html">웹툰</a></li>
             <li><a href="news.html">뉴스</a></li>
