--- a/13-naver-practice/e-sport.html
+++ b/13-naver-practice/e-sport.html
@@ -20,7 +20,7 @@
               <h1><a href="index.html">NAVER</a></h1>
               <h1><a href="#">e스포츠</a></h1>
               <ul class="esport-flex-start">
-                <li><a href="#">GAME</a></li>
+                <li><a href="game.html">GAME</a></li>
                 <li><a href="#">PC게임</a></li>
               </ul>
             </div>
