Added search icon

--- a/13-naver-practice/audio.html
+++ b/13-naver-practice/audio.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/6e4612a324.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./css/audio.css" />
   </head>
   <body>
@@ -40,8 +44,8 @@
 
           <div class="audio-nav-right audio-flex-between">
             <div class="search-wrap audio-flex-start">
-              <i class="icon-search"></i>
-              <input type="text" />
+              <i class="fas fa-search"></i>
+              <input type="text" placeholder="무엇을 찾으세요?" />
             </div>
 
             <div class="profile-wrap">
